// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex Variants Wrap renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: 1rem;
  --raam-fg-l: initial;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex Variants Wrap renders with defined theme gap 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: 1rem;
  --raam-fg-l: initial;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex Variants hStack renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 4px;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex Variants hStack renders with defined theme gap 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 32px;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex Variants vStack renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: 4px;
  --raam-fg-l: initial;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex Variants vStack renders with defined theme gap 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: 32px;
  --raam-fg-l: initial;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex renders 1`] = `
.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 2
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 3
    </p>
  </div>
</div>
`;

exports[`Flex renders an array of children 1`] = `
.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    Item 1
  </div>
  <div
    className="emotion-1"
  >
    Item 2
  </div>
  <div
    className="emotion-1"
  >
    Item 3
  </div>
</div>
`;

exports[`Flex renders children as list-items 1`] = `
Array [
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: ul;
}

<ul
    className="emotion-3"
  >
    <li
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </li>
    <li
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </li>
    <li
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </li>
  </ul>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: ol;
}

<ol
    className="emotion-3"
  >
    <li
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </li>
    <li
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </li>
    <li
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </li>
  </ol>,
]
`;

exports[`Flex renders children with span elements 1`] = `
Array [
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: span;
}

<span
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </span>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: p;
}

<p
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </p>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: h1;
}

<h1
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </h1>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: h2;
}

<h2
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </h2>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: h3;
}

<h3
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </h3>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: h4;
}

<h4
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </h4>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: h5;
}

<h5
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </h5>,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  as: h6;
}

<h6
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      <a
        href="#1"
      >
        Item 1
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#2"
      >
        Item 2
      </a>
    </span>
    <span
      className="emotion-1"
    >
      <a
        href="#3"
      >
        Item 3
      </a>
    </span>
  </h6>,
]
`;

exports[`Flex style props renders with customised flexbox props 1`] = `
.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: initial;
  --raam-fg-offset: calc(5px * -0.5);
  --raam-fg: calc(5px * 0.5);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: stretch;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-basis: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-basis: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 2
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 3
    </p>
  </div>
</div>
`;

exports[`Flex style props renders with defined gap 1`] = `
.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 1rem;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 2
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 3
    </p>
  </div>
</div>
`;

exports[`Flex style props renders with defined theme gap 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 64px;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 2
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 3
    </p>
  </div>
</div>
`;

exports[`Flex style props renders with responsive props 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,initial);
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,initial);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-0:before {
  position: absolute;
  content: "\\200B";
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  margin-top: var(--raam-fg,var(--raam-fg-t,initial));
  margin-right: var(--raam-fg,initial);
  margin-bottom: var(--raam-fg,initial);
  margin-left: var(--raam-fg,var(--raam-fg-l,initial));
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-sizing: border-box;
  margin: var(--raam-fg-offset,initial);
  min-width: 0;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --raam-fg-t: initial;
  --raam-fg-l: 16px;
  --raam-fg-offset: initial;
  --raam-fg: initial;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
}

@media screen and (min-width:40em) {
  .emotion-3 {
    -webkit-flex-wrap: wrap-reverse;
    -ms-flex-wrap: wrap-reverse;
    flex-wrap: wrap-reverse;
    --raam-fg-t: initial;
    --raam-fg-l: initial;
    -webkit-align-content: normal;
    -ms-flex-line-pack: normal;
    align-content: normal;
    -webkit-align-items: revert;
    -webkit-box-align: revert;
    -ms-flex-align: revert;
    align-items: revert;
  }
}

@media screen and (min-width:52em) {
  .emotion-3 {
    --raam-fg-t: 64px;
    --raam-fg-l: 64px;
    --raam-fg-offset: calc(64px * -0.5);
    --raam-fg: calc(64px * 0.5);
    -webkit-align-content: flex-start;
    -ms-flex-line-pack: start;
    align-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 2
    </p>
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Item 3
    </p>
  </div>
</div>
`;
